--- a/short_version/pnas.bib
+++ b/short_version/pnas.bib
@@ -1,38 +1,7 @@
-
-
-@article{Blondel2008,
-  author    = {Vincent D. Blondel and
-               Jean{-}Loup Guillaume and
-               Renaud Lambiotte and
-               Etienne Lefebvre},
-  journal   = {Journal of statistical mechanics: theory and experiment},
-  title     = {{Fast unfolding of community  in large networks}},
-  year      = {2008},
-
-  volume    = {10},
-  pages = {P10008}
-}
-
-
-
-@article{largeron2015,
-    author = {Largeron, Christine AND Mougel, Pierre-Nicolas AND Rabbany, Reihaneh AND Za{\"\i}ane, Osmar R.},
-    journal = {PLoS ONE},
-    publisher = {Public Library of Science},
-    title = {{Generating Attributed Networks with Communities}},
-    year = {2015},
-    month = {04},
-    volume = {10},
-    url = {http://dx.doi.org/10.1371%2Fjournal.pone.0122777},
-    pages = {e0122777},
-    number = {4},
-    doi = {10.1371/journal.pone.0122777}
-}        
-
 @inbook{Easley2010,
   author = {Easley, David and Kleinberg, Jon},
   year = 2010,
-  title = {{Networks, Crowds and Markets: Reasoning about a Highly Connected World}},
+  title = {Networks, Crowds and Markets: Reasoning about a Highly Connected World},
   chapter = {Networks in their Surrounding Contexts},
   publisher = {Cambridge University Press},
   pages={85--118}
@@ -391,7 +360,6 @@ publisher={JSTOR}
     title={Efficient discovery of overlapping communities in massive networks},
     author={Gopalan, Prem K and Blei, David M},
     journal={Proceedings of the National Academy of Sciences},
-    volume={110},
     number={36},
     pages={14534--14539},
     year={2013},
@@ -489,3 +457,28 @@ publisher={JSTOR}
   volume = 393,
   year = 1998
 }
+
+@article{Blondel2008,                                                                                                                                                                        
+  author    = {Vincent D. Blondel and Jean{-}Loup Guillaume and Renaud Lambiotte and Etienne Lefebvre},
+  journal   = {Journal of statistical mechanics: theory and experiment},
+  title     = {Fast unfolding of community  in large networks},
+  year      = {2008},
+  volume    = {10},
+  pages = {P10008}
+}
+
+@article{largeron2015,
+    author = {Largeron, Christine AND Mougel, Pierre-Nicolas AND Rabbany, Reihaneh AND Za{\"\i}ane, Osmar R.},
+    journal = {PLoS ONE},
+    publisher = {Public Library of Science},
+    title = {Generating Attributed Networks with Communities},
+    year = {2015},
+    month = {04},
+    volume = {10},
+    url = {http://dx.doi.org/10.1371%2Fjournal.pone.0122777},
+    pages = {e0122777},
+    number = {4},
+    doi = {10.1371/journal.pone.0122777}
+}        
+
+
